Dev mode options for start.bat